[tool.poetry]
name = "betterprompt"
version = "0.4.0"
description = "A test suite for LLM prompts"
authors = ["Krrish Dholakia <krrishdholakia@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
